--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
@@ -169,20 +173,47 @@
         </section>
     </main>
     <footer>
-        <section class="">
+        <section >
             <div class="footer">
                 <div class="fist-part">
                     <div class="left">
                         <p>44, Big Building Roosevelt Street
+                            <br>
                             Beach Gardens Florida 33410
                         </p>
                     </div>
                     <div class="right">
-                        <p>+00 123 584 124</p>
-                        <p>www.website.com</p>
+                        <p><i  class="fa-solid fa-phone"></i> +00 123 584 124</p>
+                        <p> <i class="fa-solid fa-globe"></i> www.website.com</p>
                     </div>
                 </div>
-                
+                <hr >
+                <div class="image-icon">
+                    <div class="facebook">
+                        <img src="resources/Facebook.png" alt="">
+                    </div>
+                    <div class="insta">
+                        <img src="resources/Instagram.png" alt="">
+                    </div>
+                    <div class="thread">
+                        <img src="resources/Twitter.png" alt="">
+                    </div>
+                    <div class="linkdin">
+                        <img src="resources/Linkedin.png" alt="">
+                    </div>
+                </div>
+                <hr>
+                <div class="sesh">
+                    <div class="sesh-left">
+                        <p>
+                            2017, All Rights Reserved.
+                        </p>
+                    </div>
+                    <div class="sesh-right">
+                        Unsubscribe
+                    </div>
+                </div>
+
             </div>
 
         </section>
