--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
                 <div class="form1">
                     <form action="">
-                        <input class="textt" type="text" name="" id="" placeholder="user@gmail.com">
+                        <input style="color: rgba(7, 2, 17, 0.30);" class="textt" type="text" name="" id="" placeholder="user@gmail.com">
                         <input class="btnnn" type="button" name="" id="" value="Subscribe">
 
                     </form>
